src/main/java/com/example/warsztat_samochodowy/error/ClientAlreadyExistException.java
package com.example.warsztat_samochodowy.error;

public class ClientAlreadyExistException extends RuntimeException {
    public ClientAlreadyExistException(String message) {
        super(message);
    }
}
